fix: Aggiorna .gitignore affinchè ignori il file del database per i commit futuri.